--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-s  cale=1.0">
+  <meta name="viewport">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>task timeline</title>
   <link rel="stylesheet" href="./styles.css">
